Crash after some time when baking smoke sim #33411

Closed
opened 2012-12-04 14:52:47 +01:00 by Martin Felke · 7 comments
Member

%%%Hello,

when i try to bake the smoke sim in the provided testfile (from MiikaH), blender crashes after reaching 16 % of the baking progress.
To reproduce, hit "Bake" in test file.

Blender: rev 52765
OS: Mac OS X Lion 10.7.5
CPU: Core I7 2600
RAM: 16 GB
GPU: Geforce GTX 580, 3 GB VRAM

scorpion81%%%

%%%Hello, when i try to bake the smoke sim in the provided testfile (from MiikaH), blender crashes after reaching 16 % of the baking progress. To reproduce, hit "Bake" in test file. Blender: rev 52765 OS: Mac OS X Lion 10.7.5 CPU: Core I7 2600 RAM: 16 GB GPU: Geforce GTX 580, 3 GB VRAM scorpion81%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can not reproduce the issue on linux 64bit. Afraid just another platform-specific issue?%%%

%%%Can not reproduce the issue on linux 64bit. Afraid just another platform-specific issue?%%%

%%%I can confirm the crash on OS X, but also see lots of warnings in valgrind on Linux, so debugging there should be possible too.%%%

%%%I can confirm the crash on OS X, but also see lots of warnings in valgrind on Linux, so debugging there should be possible too.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

%%%It seems this is still crashing for the bug reporter when run from the Dock, not the terminal. I can't redo that here though.%%%

%%%It seems this is still crashing for the bug reporter when run from the Dock, not the terminal. I can't redo that here though.%%%

%%%It was still using uninitialized noise tile in some cases. Fixed in svn r52786.%%%

%%%It was still using uninitialized noise tile in some cases. Fixed in svn r52786.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33411
No description provided.